# rust-template

./: Cargo.toml  build.rs  build.sh  build_debug.sh  run.sh  run_debug.sh
.cargo/: config.toml
src/: cli.rs  main.rs  setup_logger.rs
src/backup/: db.rs  minecraft.rs  mod.rs
src/config/: config.rs
src/drive/: auth.rs  mod.rs  prune.rs  upload.rs
