[package]
name = "rust-template"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
codegen-units = 1
debug = false
incremental = false
strip = true
lto = true
panic = "immediate-abort"

[dependencies]
# web framework
# axum = { version = "0.8.4", features = ["http2"] }
# axum-extra = { version = "0.10.1", features = ["cookie", "attachment", "form"] }
# axum-server = { version = "0.7.2", features = ["tls-rustls", "tokio-rustls"] }
# tower-http = { version = "0.6.6", features = [
#     "compression-zstd",
#     "trace",
#     "cors",
#     "fs",
# ] }

# parallelism
# rayon = "1.10.0"

# ORM
# diesel = { version = "2.2.11", features = [
#     "postgres",
#     "chrono",
#     "serde_json",
#     "uuid",
#     "ipnet-address",
# ] }
# diesel-async = { version = "0.6.1", features = ["bb8", "postgres"] }


# .env loading
# dotenvy = "0.15.7"

# async runtime
tokio = { version = "1.48.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "time",
] }

# loggers
tracing = { version = "0.1.43", features = ["std"] }
tracing-subscriber = { version = "0.3.22", features = ["fmt", "json"] }
tracing-appender = "0.2.4"

# error
# anyhow = "1.0.98"

# system information
# num_cpus = "1.17.0"
# sysinfo = "0.36.0"

# serialization/deserialization
# serde = "1.0.219"
# serde_derive = "1.0.219"
# serde_json = { version = "1.0.140", features = ["preserve_order"] }
# bitcode = "0.6.6"

# types
chrono = { version = "0.4.42", features = ["serde"] }
# chrono-tz = { version = "0.10.4", features = ["serde"] }
# scc = "2.3.4"
# uuid = { version = "1.17.0", features = [
#     "v4",
#     "v7",
#     "serde",
#     "zerocopy",
#     "fast-rng",
# ] }
# ipnet = "2.11.0"

# regex/verification
# regex = { version = "1.11.1", features = ["perf-dfa-full"] }
# email_address = "0.2.9"

# crypto/rand
# argon2 = "0.5.3"
# rand = "0.9"
# rand_08 = { package = "rand", version = "0.8.5" }
# rustls = { version = "0.23.29", features = [] }
# zeroize = { version = "1.8.1", features = ["derive"] }

# memory allocator
mimalloc = { version = "0.1.48", features = ["v3"] }

# email
# lettre = { version = "0.11.17", default-features = false, features = [
#     "builder",
#     "hostname",
#     "pool",
#     "smtp-transport",
#     "tokio1",
#     "tokio1-rustls-tls",
#     "tracing",
#     "serde",
# ] }

# compression
# zstd = { version = "0.13.3", features = ["fat-lto", "zstdmt", "pkg-config"] }

# numeric
# bigdecimal = { version = "0.4.8", features = ["serde"] }

# image processing
# image = "0.25.6"

# markdown
# comrak = { version = "0.39.1", features = ["emojis", "shortcodes"] }

# request to external
# reqwest = { version = "0.12.22", features = ["rustls-tls", "gzip"] }

# embed assets into binary
# rust-embed = "8.7.2"
# mime_guess = "2.0.5"

# internment
# internment = "0.8.6"

[build-dependencies]
chrono = { version = "0.4.42" }
dotenvy = "0.15.7"
serde_json = { version = "1.0.145", features = ["preserve_order"] }
