[package]
name = "db-backup-goog"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
codegen-units = 1
debug = false
incremental = false
strip = true
lto = true
panic = "abort"

[dependencies]
# async runtime
tokio = { version = "1.49.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "time",
    "process",
] }

# loggers
tracing = { version = "0.1.44", features = ["std"] }
tracing-subscriber = { version = "0.3.22", features = ["fmt", "json"] }
tracing-appender = "0.2.4"

# error
anyhow = "1.0.101"

# serialization/deserialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }

# types
chrono = { version = "0.4.43", features = ["serde"] }

# memory allocator
mimalloc = { version = "0.1.48", features = ["v3"] }

# compression
zstd = { version = "0.13.3", features = ["fat-lto", "zstdmt", "pkg-config"] }

# archive
tar = "0.4.44"

# CLI
clap = { version = "4.5.59", features = ["derive"] }

# .env loading
dotenvy = "0.15.7"

# google drive
google-drive3 = "7.0.0"
hyper-rustls = { version = "0.27.7", features = ["http2"] }
hyper-util = { version = "0.1.20", features = ["client-legacy", "http2"] }
yup-oauth2 = "12.1.2"
rustls = { version = "0.23", default-features = false, features = ["ring"] }

# mime types
mime = "0.3"

[build-dependencies]
chrono = { version = "0.4.43" }
dotenvy = "0.15.7"
serde_json = { version = "1.0.149", features = ["preserve_order"] }
